updated static imgs for splitwise proj

--- a/Karamatsu.html
+++ b/Karamatsu.html
@@ -163,7 +163,6 @@
 
                 <div class="rendering-effects-issues">
                     <h2>Challenge</h2> 
-                    <!-- Maya Particles issue -->
                     <h3>Maya nParticles issue</h3>
                     <p>Among various issues with Maya that I encountered during the project, one issue stands out in the outro scene of our animation where I wanted to simulate a gush of wind blowing sakura petals from outside to make the curtains move and flower petals go from the outside into the room through the use of Maya's nParticles and nCloth systems respectively.</p>
                     <p> However, in the process, I ran into issues with the nParticles systems, namely it not displaying the flower petals properly but instead showed a white sphere even though we added the flower object so that Maya would be able to generate more flower petals flying into the shot. Another issue was that the nCloth effect not simulating properly during render although it was working as intended in the viewport render, as it would stay at its first frame position as the scene goes on.</p>
@@ -191,7 +190,6 @@
                     
                     <p>With the deadline of the project coming closer and closer, I decided to do a work around and animated one Sakura petal in Maya and simulate the effect in After Effects using the CC Particle world effect to essentially achieve the same results. 
                     </p>
-                    <!-- videos of sakura petals in AE -->
                     <div class="grid project-card-2c">
 
                         <figure class="figure-analysis project-img">
@@ -269,7 +267,7 @@
                         <p class="project-type">UI/UX Design - UX Research - Prototyping</p>
                         <h3>Splitwise Feature Design</h3>
                         <p class="project-description">A Feature Design Project that aims to create a new feature for the expense splitting app Splitwise</p>
-                        <a href="icebreaker.html" class="label-button">View Splitwise Feature Design</a>
+                        <a href="Splitwise.html" class="label-button">View Splitwise Feature Design</a>
                     </div>
                     <div class="project-img static-img">
                         <figure>
