--- a/Splitwise.html
+++ b/Splitwise.html
@@ -90,18 +90,18 @@
                     <h3>Research</h3>
                     <p>To start our research for the app, we first looked at the app itself, studying its existing design system and interaction. Afterwards, each of us conducted secondary research online to find potential problem with Splitwise currently, this would help us narrow down our scope and assist us with indentifying what we wanted to look at during our primary research being user interviews and observing users interacting with the app.</p>
                     <!-- UPDATE THIS LATER -->
-                    <figure class="figure-analysis project-img" id="sketch-img">
-                        <img alt="Splitwise Style Guide" class="lazy js-off" src="img/2021_Icebreaker/icebreaker_storyboard_100.jpg"
-                        data-src="img/2021_Icebreaker/icebreaker_storyboard_400.jpg"
-                        data-srcset="img/2021_Icebreaker/icebreaker_storyboard_400.jpg 400w,
-                                     img/2021_Icebreaker/icebreaker_storyboard_600.jpg 600w,
-                                     img/2021_Icebreaker/icebreaker_storyboard_1080.jpg 1080w"
+                    <figure class="figure-analysis project-img static-img" >
+                        <img alt="Splitwise Style Guide" class="lazy js-off" src="img/Splitiwise/designelement_100.png"
+                        data-src="img/Splitiwise/designelement_400.png"
+                        data-srcset="img/Splitiwise/designelement_400.png 400w,
+                                     img/Splitiwise/designelement_800.png 800w,
+                                     img/Splitiwise/designelement_1080.png 1080w"
                         data-sizes="100w">
                         <noscript>
-                            <img src="img/2021_Icebreaker/icebreaker_storyboard_400.jpg" alt="Initial sketches on paper with potential ideas"
-                            srcset="img/2021_Icebreaker/icebreaker_storyboard_400.jpg 400w,
-                                    img/2021_Icebreaker/icebreaker_storyboard_600.jpg 600w,
-                                    img/2021_Icebreaker/icebreaker_storyboard_1080.jpg 1080w" 
+                            <img src="img/Splitiwise/designelement_400.png" alt="Splitwise Style Guide"
+                            srcset="img/Splitiwise/designelement_400.png 400w,
+                                    img/Splitiwise/designelement_800.png 800w,
+                                    img/Splitiwise/designelement_1080.png 1080w" 
                             sizes="(min-width: 74rem) 50vw, 100vw"
                             >
                         </noscript>
@@ -109,25 +109,27 @@
                     </figure>
                     <h3>Competitive Analysis</h3>
                     <p>During our research, we also looked at other expense spliting application to help us understand what features Splitwise have and how they compare with others in the same market</p>
-                    <figure class="project-img figure-analysis" id="color-theme">
-                        <img alt="Icebreaker color palette" class="lazy js-off" src="img/2021_Icebreaker/icebreaker_palette_100.png"
-                        data-src="img/2021_Icebreaker/icebreaker_palette_400.png"
-                        data-srcset="img/2021_Icebreaker/icebreaker_palette_400.png 400w,
-                                     img/2021_Icebreaker/icebreaker_palette_600.png 600w"
+                    <figure class="figure-analysis project-img static-img">
+                        <img alt="Splitwise Competitive Analysis" class="lazy js-off" src="img/Splitiwise/competitiveanalysis_100.png"
+                        data-src="img/Splitiwise/competitiveanalysis_400.png"
+                        data-srcset="img/Splitiwise/competitiveanalysis_400.png 400w,
+                                     img/Splitiwise/competitiveanalysis_800.png 800w,
+                                     img/Splitiwise/competitiveanalysis_1080.png 1080w"
                         data-sizes="100w">
                         <noscript>
-                            <img src="img/2021_Icebreaker/icebreaker_palette_100.png" alt="Icebreaker color palette"
-                            srcset="img/2021_Icebreaker/icebreaker_palette_400.png 400w,
-                                    img/2021_Icebreaker/icebreaker_palette_600.png 600w" 
+                            <img src="img/2021_Icebreaker/icebreaker_palette_100.png" alt="Splitwise Competitive Analysis"
+                            srcset="img/Splitiwise/competitiveanalysis_400.png 400w,
+                                    img/Splitiwise/competitiveanalysis_800.png 800w,
+                                    img/Splitiwise/competitiveanalysis_1080.png 1080w" 
                             sizes="(min-width: 74rem) 50vw, 100vw"
                             >
                         </noscript>
-                        <figcaption class="caption-analysis">Competitive analysis</figcaption>
+                        <figcaption class="caption-analysis">Splitwise competitive analysis</figcaption>
                     </figure> 
                     <h3>User Interviews & Initial Ideas</h3>
                     <p>To get a better understanding what frustrations current users have with Splitwise, we conducted two rounds of user interviews with 7 participants each times. While there were various issue and potential improvements to the app that the interviewee would like to be implemented, we found common responses highlighted in the photo below</p>
                     <!-- UPDATE IMAGES -->
-                    <figure class="figure-analysis single-img" >
+                    <figure class="figure-analysis static-img" >
                         <img alt="User Interview Highlights" class="lazy js-off" src="img/2021_Icebreaker/icebreaker_storyboard_100.jpg"
                         data-src="img/2021_Icebreaker/icebreaker_storyboard_400.jpg"
                         data-srcset="img/2021_Icebreaker/icebreaker_storyboard_400.jpg 400w,
@@ -146,18 +148,18 @@
                     </figure>
                     <p>Through interviewing users, our team came up with 3 initial ideas: A preferred payment info to let people know how to pay someone, an import spreadsheet feature to help new users coming from other expense tracking app and finally a location based currecy feature that automatically changes the currency based on the user's location and numbering format of a specific currency.</p>
                     <!-- UPDATE IMAGES -->
-                    <figure class="figure-analysis single-img" >
-                        <img alt="Initial 3 ideas" class="lazy js-off" src="img/2021_Icebreaker/icebreaker_storyboard_100.jpg"
-                        data-src="img/2021_Icebreaker/icebreaker_storyboard_400.jpg"
-                        data-srcset="img/2021_Icebreaker/icebreaker_storyboard_400.jpg 400w,
-                                        img/2021_Icebreaker/icebreaker_storyboard_600.jpg 600w,
-                                        img/2021_Icebreaker/icebreaker_storyboard_1080.jpg 1080w"
+                    <figure class="figure-analysis static-img" >
+                        <img alt="Initial 3 ideas" class="lazy js-off" src="img/Splitiwise/features_roundup_100.png"
+                        data-src="img/Splitiwise/features_roundup_400.png"
+                        data-srcset="img/Splitiwise/features_roundup_400.png 400w,
+                                     img/Splitiwise/features_roundup_800.png 800w,
+                                     img/Splitiwise/features_roundup_1080.png 1080w"
                         data-sizes="100w">
                         <noscript>
                             <img src="img/2021_Icebreaker/icebreaker_storyboard_400.jpg" alt="Initial sketches on paper with potential ideas"
-                            srcset="img/2021_Icebreaker/icebreaker_storyboard_400.jpg 400w,
-                                    img/2021_Icebreaker/icebreaker_storyboard_600.jpg 600w,
-                                    img/2021_Icebreaker/icebreaker_storyboard_1080.jpg 1080w" 
+                            srcset="img/Splitiwise/features_roundup_400.png 400w,
+                                    img/Splitiwise/features_roundup_800.png 800w,
+                                    img/Splitiwise/features_roundup_1080.png 1080w" 
                             sizes="(min-width: 74rem) 50vw, 100vw"
                             >
                         </noscript>
@@ -169,29 +171,28 @@
                     <h2>Final Proposal</h2>
                     <h3>Selected Idea and Persona</h3>
                     <p>After doing a second round of user interviews in combination with feedback from the teaching staff, our team decided to go ahead with the payment information idea with an added functionality being a 2-way verification feature. And in the process, to help us visualize our users, we formed final persona below.</p>
-                    <!-- insert persona photos  -->
-                     <figure class="figure-analysis single-img" >
-                        <img alt="Initial 3 ideas" class="lazy js-off" src="img/2021_Icebreaker/icebreaker_storyboard_100.jpg"
-                        data-src="img/2021_Icebreaker/icebreaker_storyboard_400.jpg"
-                        data-srcset="img/2021_Icebreaker/icebreaker_storyboard_400.jpg 400w,
-                                        img/2021_Icebreaker/icebreaker_storyboard_600.jpg 600w,
-                                        img/2021_Icebreaker/icebreaker_storyboard_1080.jpg 1080w"
+                     <figure class="figure-analysis static-img" >
+                        <img alt="Final mini persona" class="lazy js-off" src="img/Splitiwise/persona_100.png"
+                        data-src="img/Splitiwise/persona_400.png"
+                        data-srcset="img/Splitiwise/persona_400.png 400w,
+                                     img/Splitiwise/persona_800.png 800w,
+                                     img/Splitiwise/persona_1080.png 1080w"
                         data-sizes="100w">
                         <noscript>
-                            <img src="img/2021_Icebreaker/icebreaker_storyboard_400.jpg" alt="Initial sketches on paper with potential ideas"
-                            srcset="img/2021_Icebreaker/icebreaker_storyboard_400.jpg 400w,
-                                    img/2021_Icebreaker/icebreaker_storyboard_600.jpg 600w,
-                                    img/2021_Icebreaker/icebreaker_storyboard_1080.jpg 1080w" 
+                            <img src="img/2021_Icebreaker/icebreaker_storyboard_400.jpg" alt="Final mini persona"
+                            srcset="img/Splitiwise/persona_400.png 400w,
+                                    img/Splitiwise/persona_800.png 800w,
+                                    img/Splitiwise/persona_1080.png 1080w" 
                             sizes="(min-width: 74rem) 50vw, 100vw"
                             >
                         </noscript>
-                        <figcaption class="caption-analysis">Final Persona</figcaption>
+                        <figcaption class="caption-analysis">Final mini persona</figcaption>
                     </figure>
                     <h3>Feature overview</h3>
                     <p>The "Payment information and 2-way verification" feature lets users see their friends' preferred payment methods when settling debts. Additionally, through real-time updates, users can see the status of their payments and know precisely when they have been received. Simplifying the process of managing shared expenses streamlines the process and ensures peace of mind for all users involved</p>
 
                     <!-- insert photos of Jeanne and Alex's phone  -->
-                    <div class="grid project-card-2c" id="jeanne-alex-phone">
+                    <div class="grid project-card-2c static-img">
 
                         <!-- Ren -->
                             <figure class="figure-analysis project-img">
@@ -230,7 +231,9 @@
                             </figure>
                     </div>
                     <h3>Final Prototype</h3>
-                    <p>When making the final prototype in Figma, I wanted to showcase the different scenarios that users might go through and as such I suggested to my team to create 3 different flows which can be seen below!</p>
+                    <p>When making the final prototype in Figma, I wanted to showcase the different scenarios that users might go through and as such I suggested to my team to create 3 different flows which can be seen through the videos below or exeperience it yourself through the <a href="https://www.figma.com/proto/VAOcVBcGSAwZ7D1VLTh5q4/Feature-Design-Project?page-id=321%3A1562&type=design&node-id=555-1812&viewport=408%2C212%2C0.07&t=ei9dj8wMqRt0bs0a-1&scaling=scale-down&starting-point-node-id=555%3A1812&show-proto-sidebar=1&mode=design" class="in-text-link" target="_blank">interactive prototype!</a></p>
+
+                    <!-- MAKE VIDEOS -->
                     <figure class="project-img figure-analysis">
                         <video class="lazy js-off" width="1920" height="1080" data-src="img/2021_Icebreaker/ayumi_hand.webm" src="img/2021_Icebreaker/ayumi_hand_100.png" autoplay loop playsinline muted aria-label="After Effects puppet tool" controls="controls"></video>
                         <img alt="After Effects puppet tool"class="lazy js-off" src="img/2021_Icebreaker/ayumi_hand_100.png"
