--- a/Fureverhome.html
+++ b/Fureverhome.html
@@ -33,25 +33,9 @@
             <section class="project-banner">
                     <div class="grid project-banner">
                     <!-- left side -->
-                        <div class="project-img">
-                            <figure>
-                                <video class="lazy js-off" width="1920" height="1080" data-src="img/2021_Icebreaker/Spring2021.webm" src="img/2021_Icebreaker/Spring2021_fallback_100.jpg" autoplay loop playsinline muted aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail" controls="controls"></video>
-                                <img alt="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"class="lazy js-off" src="img/2021_Icebreaker/Spring2021_fallback_100.jpg"
-                                data-src="img/2021_Icebreaker/Spring2021_fallback_400.jpg"
-                                data-srcset="img/2021_Icebreaker/Spring2021_fallback_400.jpg 400w,
-                                            img/2021_Icebreaker/Spring2021_fallback_600.jpg 600w"
-                                data-sizes="100w">
-
-                                <noscript>  
-                                    <video src="img/2021_Icebreaker/Spring2021.webm" width="1920" height="1080" autoplay loop playsinline muted aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail" controls="controls"></video> 
-                                        <img src="img/2021_Icebreaker/Spring2021_fallback_400.jpg" alt="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"
-                                        srcset="img/2021_Icebreaker/Spring2021_fallback_400.jpg 400w,
-                                                img/2021_Icebreaker/Spring2021_fallback_600.jpg 600w" 
-                                        sizes="(min-width: 60rem) 50vw, 100vw"
-                                        >
-                                </noscript>
-                            </figure> 
-                        </div>  
+                    <div class="project-img" id="iframe-container">
+                        <iframe src="https://www.youtube.com/embed/TkZZVFSmbB4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>    
                     <!-- right side -->
                         <div class="project-details">
                             <p class="project-type">Motion Design - Character Animation - Story Boarding</p>
