--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="grid featured-project" id="second-project">
 
                     
-                    <div class="project-img project-item">
+                    <div class="project-img">
                         <figure>
                             <video class="lazy js-off" width="1920" height="1080" data-src="img/otherProjects/poster_reveal.webm" src="img/otherProjects/SummerFest_100.jpg" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail" controls="controls">
                             </video>
@@ -101,7 +101,7 @@
                         </figure> 
                     </div>
 
-                    <div class="project-details project-item">
+                    <div class="project-details">
                         <p class="project-type">Motion Design - Graphic Design - Social Media - Photography</p>
                         <h3>The SFU Summer Festival</h3>
                         <p class="project-description">A multimedia voluntary project for <a href="https://sfusummerfestival.com/" class="in-text-link" target="_blank">The SFU Summer Festival event</a></p>
@@ -113,7 +113,7 @@
             <div class="scroll-reveal container left active">
                 <div class="grid featured-project" id="third-project">
 
-                    <div class="project-details">
+                    <div class="project-details project-item ">
                         <p class="project-type">UI/UX Design - UX Research - Prototyping</p>
                         <h3>Splitwise Feature Design</h3>
                         <p class="project-description">A Feature Design Project that aims to create a new feature for the expense splitting app Splitwise</p>
@@ -121,7 +121,7 @@
                         <a href="Splitwise.html" class="label-button">View Splitwise Feature Design</a>
                     </div>
                     
-                    <div class="project-img static-img">
+                    <div class="project-img static-img project-item ">
                         <figure>
                             <img alt="Splitiwse Banner image" class="lazy js-off" src="img/Splitiwise/Splitwise_banner_100.png"
                             data-src="img/Splitiwise/Splitwise_banner_400.png"
@@ -147,7 +147,7 @@
                 <div class="grid featured-project" id="fourth-project">
                     <!-- left side -->
 
-                    <div class="project-img project-item">
+                    <div class="project-img">
                         <figure>
 
                             <video class="lazy js-off" width="1920" height="1080" data-src="img/2021_Icebreaker/Spring2021.webm" src="img/2021_Icebreaker/Spring2021_fallback_100.jpg" autoplay loop playsinline muted aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail" controls="controls"></video>
@@ -169,7 +169,7 @@
                     </div>
 
                     <!-- right side -->
-                    <div class="project-details project-item">
+                    <div class="project-details">
                         <p class="project-type">Motion Design - Character Animation - Story Boarding</p>
                         <h3>SFU Anime Icebreaker</h3>
                         <p class="project-description">A Motion Graphic animation for the <a href="https://www.instagram.com/sfuanime/" class="in-text-link" target="_blank"> SFU Anime Club's</a> seasonal Club's Day event</p> 
@@ -181,7 +181,7 @@
             <div class="scroll-reveal container left active">
                 <div class="grid featured-project" id="fifth-project">
 
-                    <div class="project-details">
+                    <div class="project-details project-item ">
                         <p class="project-type">3D Modelling/Animation - Award Winning</p>
                         <h3>POV: You're a Karamatsu Girl</h3>
                         <p class="project-description">A fanmade 3D Music Video made in Autodesk Maya made for a 3rd year university course</p>
@@ -189,7 +189,7 @@
                         <a href="karamatsu.html" class="label-button">View Karamatsu Girl</a>
                     </div>
 
-                    <div class="project-img" id="iframe-container">
+                    <div class="project-img project-item " id="iframe-container">
                         <iframe src="https://www.youtube.com/embed/P-Jd2lbXlTE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
 
