Restructure files for summerfest files and added photos
Also made changes to project files's copy and started fureverhome copy

--- a/Fureverhome.html
+++ b/Fureverhome.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&family=Noto+Sans+JP&family=Noto+Sans:wght@400;500&display=swap" rel="stylesheet">
 
-    <title>SFU Anime 2021 Icebreaker | Luke Do</title>
+    <title>Fureverhome | Luke Do</title>
 
     <link href="css/main_work.css" rel="stylesheet">
 
@@ -23,7 +23,7 @@
                 </a>
 
                 <div class="nav-grid-text grid nav-button add-gutters">
-                    <a href="index.html#Featured_Project" class="nav-item">Works</a>
+                    <a href="index.html#Featured_Project" class="nav-item">Projects</a>
                     <a href="about.html" class="nav-item">About</a>
                     <a href="#" class="nav-item">Resume</a>
                 </div>
@@ -37,26 +37,30 @@
                         <iframe src="https://www.youtube.com/embed/TkZZVFSmbB4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>    
                     <!-- right side -->
-                        <div class="project-details">
-                            <p class="project-type">Motion Design - Character Animation - Story Boarding</p>
-                            <h1>SFU Anime Spring 2021 Icebreaker</h1>
-                            <p class="project-description">A Motion Graphic animation for the <a href="https://www.instagram.com/sfuanime/" class="in-text-link" target="_blank"> SFU Anime Club's</a> seasonal Club's Day event</p> 
-                            <!-- <p class="project-description">Personal Project</p> -->
-                            <div class="grid project-roles">
-                                <div class="col-1">
-                                    <p class="role-type">Client</p>
-                                    <p class="role-details">SFU Anime Club</p>
-                                </div>
-                                <div class="col-2">
-                                    <p class="role-type">Type</p>
-                                    <p class="role-details">Personal Project</p>
-                                </div>
-                                <div class="col-3">
-                                    <p class="role-type">Tools</p>
-                                    <p class="role-details">After Effects</p>
-                                </div>
+                    <div class="project-details">
+                        <p class="project-type">UI/UX Design - UX Research - Prototyping</p>
+                        <h1>Fureverhome</h1>
+                        <p class="project-description">A fictional application dedicated to support new and current rescued dog owners</p> 
+                        <div class="grid project-roles">
+                            <div class="col-1">
+                                <p class="role-type">The Team</p>
+                                <p class="role-details">Luke Do</p>
+                                <p class="role-details"><a href="https://www.patriciasugiarta.com/" class="in-text-link" target="_blank">Particia Sugiarta</a></p>
+                                <p class="role-details"><a href="https://kezia-taufiq.webflow.io/" class="in-text-link" target="_blank">Kezia Taufiq</a></p>
+                                <p class="role-details"><a href="http://jovnnv.com/" class="in-text-link" target="_blank">Joanna Lin</a></p>
+                            </div>
+                            <div class="col-2">
+                                <p class="role-type">Roles</p>
+                                <p class="role-details">UX Researcher</p>
+                                <p class="role-details">UX Designer</p>
+                                <p class="role-details">Wireframe and Prototyping</p>
+                            </div>
+                            <div class="col-3">
+                                <p class="role-type">Tools</p>
+                                <p class="role-details">Figma</p>
                             </div>
                         </div>
+                    </div>
                 </div>
             </section>
 
@@ -65,10 +69,11 @@
         <main>
             <section class="project-analysis" id="Background">
                 <h2>Background</h2>
-                <p>SFU Anime Spring 2021 Icebreaker Motion Graphic is a personal project that focuses on advertising the seasonal Club's Day event organized by the <a href="https://www.instagram.com/sfuanime/" class="in-text-link" target="_blank">SFU Anime Club</a> and was created using Adobe After Effects. I volunteered to take on this project because as it would be an opportunity for me to learn more about character animation and particle effects that I have never used in After Effects before.</p>
+                <p>FurEverHome is an application dedicated to support new and current rescued dog owners by creating a nurturing environment for both the owner and dog alike. This project was developed for as the final project for an SFU's 3rd year design course, IAT 334: Interface Design in Summer 2023.</p>
+                <!-- img of the final mock-up? -->
             </section>
-            <section class="project-analysis" id="Process">
-                <h2>Process</h2>
+            <section class="project-analysis">
+                <h2>Initial Research</h2>
                 <div class="concept">
                     <h3>Initial Concept</h3>
                     <p>After taking a look at <a href="https://www.instagram.com/p/CKPK4STM8En/" class="in-text-link" target="_blank">the original poster created by SFU Anime</a>, I quickly wrote and sketch down some of my ideas on how to breathe some life into the poster. The characters in the poster stood out especially to me because they present an opportunity for me to experiment with animating within After Effects. I also wanted to express the feeling of the spring season through the color palette with the sakura leaves falling from the tree.</p>
