--- a/Splitwise.html
+++ b/Splitwise.html
@@ -61,12 +61,12 @@
                                     <p class="role-type">The Team</p>
                                     <p class="role-details">Luke Do</p>
                                     <p class="role-details"><a href="https://www.patriciasugiarta.com/" class="in-text-link" target="_blank">Particia Sugiarta</a></p>
-                                    <p class="role-details">Kezia Gabriella Taufiq</p>
+                                    <p class="role-details"><a href="https://kezia-taufiq.webflow.io/" class="in-text-link" target="_blank">Kezia Taufiq</a></p>
                                 </div>
                                 <div class="col-2">
                                     <p class="role-type">Roles</p>
                                     <p class="role-details">UX Researcher</p>
-                                    <p class="role-details">UX Designer</p>
+                                    <p class="role-details">UI Designer</p>
                                 </div>
                                 <div class="col-3">
                                     <p class="role-type">Tools</p>
@@ -117,7 +117,7 @@
                                      img/Splitiwise/competitiveanalysis_1080.png 1080w"
                         data-sizes="100w">
                         <noscript>
-                            <img src="img/2021_Icebreaker/icebreaker_palette_100.png" alt="Splitwise Competitive Analysis"
+                            <img src="img/Splitiwise/competitiveanalysis_100.png" alt="Splitwise Competitive Analysis"
                             srcset="img/Splitiwise/competitiveanalysis_400.png 400w,
                                     img/Splitiwise/competitiveanalysis_800.png 800w,
                                     img/Splitiwise/competitiveanalysis_1080.png 1080w" 
