--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <p class="project-type">UI/UX Design - UX Research - Prototyping</p>
                         <h3>Fureverhome</h3>
                         <p class="project-description">A fictional application dedicated to support new and current rescued dog owners.</p> 
-                        <a href="Fureverhome.html" class="label-button">View Fureverhome</a>
+                        <a href="#" class="label-button">Coming soon 👀</a>
                     </div>
                     <!-- right side -->
                     <div class="project-img project-item static-img">
@@ -81,20 +81,20 @@
                     
                     <div class="project-img">
                         <figure>
-                            <video class="lazy js-off" width="1920" height="1080" data-src="img/otherProjects/poster_reveal.webm" src="img/otherProjects/SummerFest_100.jpg" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail" controls="controls">
+                            <video class="lazy js-off" width="1920" height="1080" data-src="img/summerfest/poster_reveal.webm" src="img/summerfest/SummerFest_100.jpg" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail" controls="controls">
                             </video>
-                            <img alt="SFU Summer Festival's 10th Anniversary Teaser Thumbnail" class="lazy js-off" src="img/otherProjects/SummerFest_100.jpg"
-                            data-src="img/otherProjects/SummerFest_400.jpg"
-                            data-srcset="img/otherProjects/SummerFest_400.jpg 400w,
-                                        img/otherProjects/SummerFest_600.jpg 600w"
+                            <img alt="SFU Summer Festival's 10th Anniversary Teaser Thumbnail" class="lazy js-off" src="img/summerfest/SummerFest_100.jpg"
+                            data-src="img/summerfest/SummerFest_400.jpg"
+                            data-srcset="img/summerfest/SummerFest_400.jpg 400w,
+                                         img/summerfest/SummerFest_600.jpg 600w"
                             data-sizes="100w">
 
                             <noscript>
-                                <video src="img/otherProjects/poster_reveal.webm" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail" controls="controls"></video> 
+                                <video src="img/summerfest/poster_reveal.webm" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail" controls="controls"></video> 
                             
-                                <img src="img/otherProjects/SummerFest_400.jpg" alt="SFU Summer Festival's 10th Anniversary Teaser Thumbnail"
-                                srcset="img/otherProjects/SummerFest_400.jpg 400w,
-                                        img/otherProjects/SummerFest_600.jpg 600w" 
+                                <img src="img/summerfest/SummerFest_400.jpg" alt="SFU Summer Festival's 10th Anniversary Teaser Thumbnail"
+                                srcset="img/summerfest/SummerFest_400.jpg 400w,
+                                        img/summerfest/SummerFest_600.jpg 600w" 
                                 sizes="(min-width: 60rem) 50vw, 100vw"
                                 >
                             </noscript>
@@ -162,8 +162,7 @@
                                     <img src="img/2021_Icebreaker/Spring2021_fallback_400.jpg" alt="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"
                                     srcset="img/2021_Icebreaker/Spring2021_fallback_400.jpg 400w,
                                             img/2021_Icebreaker/Spring2021_fallback_600.jpg 600w" 
-                                    sizes="(min-width: 60rem) 50vw, 100vw"
-                                    >
+                                    sizes="(min-width: 60rem) 50vw, 100vw">
                             </noscript>
                         </figure> 
                     </div>
