--- a/icebreaker.html
+++ b/icebreaker.html
@@ -322,31 +322,32 @@
                 <h3>Check out the process behind other projects!</h3>
                 <div class="grid project-card-2c">
                     <div class="project-details project-item">
-                        <p class="project-type">Motion Design - Character Trailer</p>
-                        <h3>KAFU (可不)</h3>
-                        <p class="project-description">A fanmade motion graphic animation introducing <a href="https://kaf-u.kamitsubaki.jp/" class="in-text-link" target="_blank">KAFU (可不) from Kamitsubaki Studio</a></p>
+                        <p class="project-type">Motion Design - Graphic Design - Social Media - Photography</p>
+                        <h3>The SFU Summer Festival</h3>
+                        <p class="project-description">A multimedia voluntary project for the annual SFU Summer Festival event</p>
                         <!-- placeholder -->
-                        <a href="karamatsu.html" class="label-button">View POV: You're a Karamatsu Girl</a>
+                        <a href="summerfest.html" class="label-button">The SFU Summer Festival</a>
                     </div>
                     <div class="project-img project-item">
                         <figure>
-
-                            <video class="lazy js-off" width="1000" height="1000" data-src="img/otherProjects/KAFU.webm" src="img/otherProjects/KAFU_fallback_100.jpg" autoplay loop playsinline muted aria-label="KAFU Character Introduction Trailer Thumbnail" controls="controls"></video>
-                            <img alt="KAFU Character Introduction Trailer Thumbnail" class="lazy js-off" src="img/otherProjects/KAFU_fallback_100.jpg"
-                            data-src="img/otherProjects/KAFU_fallback_400.jpg"
-                            data-srcset="img/KAFU_fallback_400.jpg 400w,
-                                            img/KAFU_fallback_600.jpg 600w"
+                            <video class="lazy js-off" width="1920" height="1080" data-src="img/summerfest/poster_reveal.webm" src="img/summerfest/SummerFest_100.jpg" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail" controls="controls">
+                            </video>
+                            <img alt="SFU Summer Festival's 10th Anniversary Teaser Thumbnail" class="lazy js-off" src="img/summerfest/SummerFest_100.jpg"
+                            data-src="img/summerfest/SummerFest_400.jpg"
+                            data-srcset="img/summerfest/SummerFest_400.jpg 400w,
+                                         img/summerfest/SummerFest_600.jpg 600w"
                             data-sizes="100w">
 
                             <noscript>
-                                <video src="img/otherProjects/KAFU.webm" autoplay loop playsinline muted aria-label="KAFU Character Introduction Trailer Thumbnail" controls="controls"></video> 
-                                <img src="img/otherProjects/KAFU_fallback_400.jpg" alt="KAFU Character Introduction Trailer Thumbnail"
-                                srcset="img/otherProjects/KAFU_fallback_400.jpg 400w,
-                                        img/otherProjects/KAFU_fallback_600.jpg 600w"
+                                <video src="img/summerfest/poster_reveal.webm" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail" controls="controls"></video> 
+                            
+                                <img src="img/summerfest/SummerFest_400.jpg" alt="SFU Summer Festival's 10th Anniversary Teaser Thumbnail"
+                                srcset="img/summerfest/SummerFest_400.jpg 400w,
+                                        img/summerfest/SummerFest_600.jpg 600w" 
                                 sizes="(min-width: 60rem) 50vw, 100vw"
                                 >
                             </noscript>
-                        </figure>
+                        </figure> 
                     </div>
                 </div>
             </section>
