Finshed Splitwise project
Uploaded assets for Splitwise project and made adjustments to the copy for pages and fixed folder typos

--- a/Karamatsu.html
+++ b/Karamatsu.html
@@ -232,7 +232,8 @@
                 </div>
                     
                     <h2>Final Results!</h2>
-                    <p>After working on the animation for over a month in total, our team was able to showcase our fanmade 3D music video in our class's final showcase. We received great praises from our instructors and peers, and were even awarded the "Rendering Revive" award for our creative camera movement and lighting in creating a POV 3D animation! You can watch our final animation <a href="https://youtu.be/P-Jd2lbXlTE" class="in-text-link" target="_blank">here!</a> And for more details about our project including the initial animatic and character design, <a href="https://iat343dreamers.wixsite.com/iat-343dreamers" class="in-text-link" target="_blank">visit our project website!</a></p>
+                    <p>After working on the animation for over a month in total, our team was able to showcase our fanmade 3D music video in our class's final showcase. We received great praises from our instructors and peers, and were even awarded the "Rendering Revive" award for our creative camera movement and lighting in creating a POV 3D animation and was featured in our program's <a href="https://www.sfu.ca/siat/showcase/spring-2023-project-showcase/explore-the-projects/iat-343-pov.html" class="in-text-link" target="_blank">showcase</a> as one of the best projects in the semester!</p>
+                    <p>You can watch our final animation <a href="https://youtu.be/P-Jd2lbXlTE" class="in-text-link" target="_blank">here!</a> And for more details about our project including the initial animatic and character design, <a href="https://iat343dreamers.wixsite.com/iat-343dreamers" class="in-text-link" target="_blank">visit our project website!</a></p>
         
                     <figure class="project-img figure-analysis" id="award">
                         <img alt="Rendering revive award" class="lazy js-off" src="img/karamatsu/award_100.png"
@@ -271,17 +272,17 @@
                     </div>
                     <div class="project-img static-img">
                         <figure>
-                            <img alt="Splitiwse Banner image" class="lazy js-off" src="img/Splitiwise/Splitwise_banner_100.png"
-                            data-src="img/Splitiwise/Splitwise_banner_400.png"
-                            data-srcset="img/Splitiwise/Splitwise_banner_400.png 400w,
-                                         img/Splitiwise/Splitwise_banner_800.png   800w,
-                                         img/Splitiwise/Splitwise_banner_1080.png  1080w"
+                            <img alt="Splitiwse Banner image" class="lazy js-off" src="img/Splitwise/Splitwise_banner_100.png"
+                            data-src="img/Splitwise/Splitwise_banner_400.png"
+                            data-srcset="img/Splitwise/Splitwise_banner_400.png 400w,
+                                         img/Splitwise/Splitwise_banner_800.png   800w,
+                                         img/Splitwise/Splitwise_banner_1080.png  1080w"
                             data-sizes="100w">
                             <noscript>
-                                <img src="img/Splitiwise/Splitwise_banner_400.png" alt="Splitiwse Banner image"
-                                srcset="img/Splitiwise/Splitwise_banner_400.png 400w,
-                                        img/Splitiwise/Splitwise_banner_800.png   800w,
-                                        img/Splitiwise/Splitwise_banner_1080.png  1080w" 
+                                <img src="img/Splitwise/Splitwise_banner_400.png" alt="Splitiwse Banner image"
+                                srcset="img/Splitwise/Splitwise_banner_400.png 400w,
+                                        img/Splitwise/Splitwise_banner_800.png   800w,
+                                        img/Splitwise/Splitwise_banner_1080.png  1080w" 
                                 sizes="(min-width: 74rem) 50vw, 100vw"
                                 >
                             </noscript>
