Uploaded static assets for summerfest project

--- a/summerfest.html
+++ b/summerfest.html
@@ -179,21 +179,21 @@
                     <div class="grid project-card-2c">
 
                         <figure class="figure-analysis project-img">
-                            <video class="lazy js-off" width="1920" height="1080" data-src="img/2021_Icebreaker/ayumi_hand_mask_off.webm" src="img/2021_Icebreaker/ayumi_hand_mask_off_100.png" autoplay loop playsinline muted aria-label="Character's Mask Off" controls="controls"></video>
-                            <img alt="Character's Mask Off"class="lazy js-off" src="img/2021_Icebreaker/ayumi_hand_mask_off_100.png"
-                            data-src="img/2021_Icebreaker/ayumi_hand_mask_off_400.png"
-                            data-srcset="img/2021_Icebreaker/ayumi_hand_mask_off_400.png 400w,
-                                         img/2021_Icebreaker/ayumi_hand_mask_off_800.png 800w,
-                                         img/2021_Icebreaker/ayumi_hand_mask_off_1080.png 1080w"
+                            <video class="lazy js-off" width="1920" height="1080" data-src="img/summerfest/poster_reveal.webm" src="img/summerfest/SummerFest_100.jpg" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail" controls="controls">
+                            </video>
+                            <img alt="SFU Summer Festival's 10th Anniversary Teaser Thumbnail" class="lazy js-off" src="img/summerfest/SummerFest_100.jpg"
+                            data-src="img/summerfest/SummerFest_400.jpg"
+                            data-srcset="img/summerfest/SummerFest_400.jpg 400w,
+                                         img/summerfest/SummerFest_600.jpg 600w"
                             data-sizes="100w">
 
                             <noscript>
-                                <video src="img/2021_Icebreaker/ayumi_hand_mask_off.webm" autoplay loop playsinline muted aria-label="Character's Mask Off" controls="controls"></video> 
-                                <img src="img/2021_Icebreaker/ayumi_hand_mask_off_400.png" alt="Character's Mask Off"
-                                srcset="img/2021_Icebreaker/ayumi_hand_mask_off_400.png 400w,
-                                        img/2021_Icebreaker/ayumi_hand_mask_off_800.png 800w,
-                                        img/2021_Icebreaker/ayumi_hand_mask_off_1080.png 1080w" 
-                                sizes="(min-width: 74rem) 50vw, 100vw"
+                                <video src="img/summerfest/poster_reveal.webm" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail" controls="controls"></video> 
+                            
+                                <img src="img/summerfest/SummerFest_400.jpg" alt="SFU Summer Festival's 10th Anniversary Teaser Thumbnail"
+                                srcset="img/summerfest/SummerFest_400.jpg 400w,
+                                        img/summerfest/SummerFest_600.jpg 600w" 
+                                sizes="(min-width: 60rem) 50vw, 100vw"
                                 >
                             </noscript>
                             <figcaption class="caption-analysis">Animation with pen tool mask off</figcaption>
@@ -269,7 +269,7 @@
 
                 <div class="socmed">
                     <h2>Social Media </h2>
-                    <p>Since I have been helping manage <a href="https://www.facebook.com/anitrendzplus" class="in-text-link" target="_blank">the Anime Trending+</a> Facebook page, I wanted to expand my social media skills by taking charge of the Summerfest social media channels on Twitter, Facebook, Instagram and help the event grow by reaching more people. In addition, through engaging with the local convention community, responding to their questions in DMs and comments on posts, I was also able to improve my social skills along the way!</p>
+                    <p>Since I have been helping manage <a href="https://www.facebook.com/anitrendzplus" class="in-text-link" target="_blank">the Anime Trending+</a> Facebook page, I wanted to expand my social media skills by taking charge of the Summerfest social media channels on X (formally known as Twitter), Facebook, Instagram and help the event grow by reaching more people. In addition, through engaging with the local convention community, responding to their questions in DMs and comments on posts, I was also able to improve my social skills along the way!</p>
                     <!-- insert screenshots of the Summerfest insta, fb, twitter page?  -->
                     <div class="grid project-card-2c static-img">
 
