Finish Summerfest draft project file

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <p class="project-type">UI/UX Design - UX Research - Prototyping</p>
                         <h3>Fureverhome</h3>
                         <p class="project-description">A fictional application dedicated to support new and current rescued dog owners.</p> 
-                        <a href="#" class="label-button">Coming soon 👀</a>
+                        <a href="#" class="label-button">Coming soon 👀!!</a>
                     </div>
                     <!-- right side -->
                     <div class="project-img project-item static-img">
